--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,7 @@
 body {
-    background:linear-gradient(135deg, #d1fed2, #ffffff) ;
+    background: linear-gradient(180deg, #d1fed2, #ffffff) ;
 }
+img {
+    width: 200px;
+    height: 300px;
+    }
