--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
-img {
-width: 200px;
-height: 300px;
+* {
+    margin: 0;
+    padding: 0;
+    
 }
-body {
-    background: linear-gradient(180deg, #ffff99, #ffffff) ;
+
+
+@media screen and (max-width: 480px ) {
+        body {
+            background: linear-gradient(180deg, #ffff99, #ffffff) ;
+        }
+        
+        .forsidelogo {
+           display: grid;
+            place-items: center;
+           width: 50px;
+           height: 60px;
+        }
+    
 }
