--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,12 @@
         }
         
         .forsidelogo {
-           display: grid;
-            place-items: center;
-           width: 50px;
-           height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 60px;
+            margin: auto; /* Centrerer containeren horisontalt */
         }
     
 }
