--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
             align-items: center;
             width: 50px;
             height: 60px;
-            margin: auto; /* Centrerer containeren horisontalt */
+            margin: auto;
+            padding-top: 50px;
         }
     
 }
