--- a/css/style.css
+++ b/css/style.css
@@ -19,5 +19,66 @@
             margin: auto;
             padding-top: 50px;
         }
+
+        /* Reset og styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+/* Burger menu ikon */
+.burger {
+    width: 30px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 10px;
+}
+
+.burger .line {
+    width: 100%;
+    height: 3px;
+    background-color: #333;
+}
+
+/* Menu styling */
+.menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 100vh;
+    background-color: #333;
+    display: none; /* Skjult som standard */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu ul {
+    list-style: none;
+}
+
+.menu li {
+    margin: 20px 0;
+}
+
+.menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* Når menuen er aktiv */
+.menu.active {
+    display: flex;
+}
+
     
 }
