--- a/css/style.css
+++ b/css/style.css
@@ -16,70 +16,26 @@
             align-items: center;
             width: 50px;
             height: 60px;
-            margin: auto;
-            padding-top: 50px;
-
+            margin: auto; /* Centrerer containeren horisontalt */
         }
-
-        /* Reset og styling */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-}
-
-/* Burger menu ikon */
-.burger {
-    width: 30px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    margin: 10px;
-}
-
-.burger .line {
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-}
-
-/* Menu styling */
-.menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height: 100vh;
-    background-color: #333;
-    display: none; /* Skjult som standard */
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu ul {
-    list-style: none;
-}
-
-.menu li {
-    margin: 20px 0;
-}
-
-.menu a {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-/* Når menuen er aktiv */
-.menu.active {
-    display: flex;
-}
-
-    
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        /* Styling af burgerikonet */
+        .burger {
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            width: 30px; /* Juster bredden, hvis nødvendigt */
+        }
+        
+        .line {
+            height: 3px;
+            background-color: #da7897; /* Farvekode for linjerne */
+            margin: 5px 0;
+            border-radius: 2px; /* Giver en rundet kant til linjerne */
+        }
 }
