--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,77 @@
             margin: auto; /* Centrerer containeren horisontalt */
         }
 
-        
-        /* Styling af burgerikonet */
-        .burger {
+        /*  .burger {
             display: flex;
             flex-direction: column;
             cursor: pointer;
-            width: 30px; /* Juster bredden, hvis nødvendigt */
+            width: 30px; 
         }
         
         .line {
             height: 2px;
-            background-color: #da7897; /* Farvekode for linjerne */
+            background-color: #da7897; 
             margin: 5px 0;
-            border-radius: 2px; /* Giver en rundet kant til linjerne */
+            border-radius: 2px; 
             width: 30px;
 
-        }
+        } */
+        /* Reset for margin/padding */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Skjul checkboxen */
+.burger-checkbox {
+    display: none;
+}
+
+/* Styling af burgerikonet */
+.burger {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    width: 30px;
+    margin: 10px;
+}
+
+.line {
+    height: 3px;
+    background-color: #da7897; /* Farve på linjerne */
+    margin: 5px 0;
+    border-radius: 2px; /* Runding af hjørner */
+}
+
+/* Styling af menuen */
+.menu {
+    display: none; /* Skjul menuen som standard */
+    background-color: #333;
+    position: absolute;
+    top: 50px; /* Placer menuen nedenfor burgerikonet */
+    width: 100%;
+    text-align: center;
+}
+
+.menu ul {
+    list-style: none;
+}
+
+.menu ul li {
+    padding: 15px;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    display: block;
+}
+
+/* Vis menuen, når checkboxen er markeret */
+.burger-checkbox:checked + .burger + .menu {
+    display: block;
+}
+        
 }
