--- a/css/events.css
+++ b/css/events.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 480px ) {
         body {
-            background: linear-gradient(180deg, #ffff99, #ffffff) ;
+            background: linear-gradient(180deg, #d0fcff, #ffffff) ;
         }
         
         .forsidelogo {
@@ -56,7 +56,7 @@
     display: none; /* Skjul menuen som standard */
     background-color: #da7897;
     position: absolute;
-    top: 120px; /* Placer menuen nedenfor burgerikonet */
+    top: 90px; /* Placer menuen nedenfor burgerikonet */
     right: 0;
     width: 100%;
     text-align: left;
