--- a/css/style.css
+++ b/css/style.css
@@ -93,5 +93,14 @@ hr {
     
 }
 
+h2 {
+    text-align: center;
+    font-size: 1.2rem;
+}
+.infotext {
+    font-size: 1rem;
+    text-align: center;
+
+}
 
 }
