--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,57 @@ h2 {
     position: absolute;
     border: none;
 }
+.lokationh2 {
+    padding-top: 8rem;
+}
+.lokationshr {
+    margin-left: 30px;
+    margin-right: 30px;
+}
 
+.lokationtekst {
+    padding-top: 1rem;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 1.8rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.lokationbox {
+    position: relative;
+    width: 300px;
+    height: 300px;
+}
+
+.lokationimg {
+    border-radius: 44px;
+    position: absolute;
+    top: 1rem;
+    left: 10rem;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    object-fit: cover;
+}
+
+.lokationbutton {
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    top: 16.5rem;
+    left: 2rem;
+    z-index: 4;
+    position: absolute;
+    border: none;
+}
+
+.lokationlink {
+    text-decoration: none;
+    color: black;
+    font-family: playfairdisplay;
+    font-weight: bold;
+}
 
 }
