--- a/css/style.css
+++ b/css/style.css
@@ -297,5 +297,53 @@ h2 {
     font-family: playfairdisplay;
     font-weight: bold;
 }
-
+.reviewh2 {
+    padding-top: 8rem;
+}
+.reviewhr {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.reviewboks {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.haticeboks {
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.lotteboks {
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.galboks{
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.hatice {
+ margin-top: 1rem;
+ margin-bottom: 1rem;
+}
+.lotte {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.gal {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 }
