--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ h2 {
 .instagramlogo {
     width: 2rem;
     height: 2rem;
+    margin-right: 1rem;
 
 }
 .facebooklogo {
@@ -363,4 +364,5 @@ h2 {
     display: flex;
     justify-content: center;
 }
+
 }
