--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ h2 {
     position: relative;
     width: 300px;
     height: 300px;
+    max-width: 100%;
 
 }
 
@@ -188,6 +189,7 @@ h2 {
     position: relative;
     width: 300px;
     height: 300px;
+    max-width: 100%;
 }
 
 .run{
@@ -276,6 +278,7 @@ h2 {
     height: 100%;
     z-index: 1;
     object-fit: cover;
+    max-width: 100%;
 }
 
 .lokationbutton {
