--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ h2 {
 .eventstekst{
     padding-top: 1rem;
     font-size: 1rem;
-    text-align: center;
+    text-align: justify;
     line-height: 1.8rem;
     padding-left: 3rem;
     padding-right: 3rem;
@@ -257,7 +257,7 @@ h2 {
 .lokationtekst {
     padding-top: 1rem;
     font-size: 1rem;
-    text-align: center;
+    text-align: justify;
     line-height: 1.8rem;
     padding-left: 3rem;
     padding-right: 3rem;
