--- a/css/menu.css
+++ b/css/menu.css
@@ -10,7 +10,7 @@
 }
 
 
-@media screen and (max-width: 480px ) {
+@media screen and (max-width: 391px ) {
         body {
             background: linear-gradient(180deg, #d1fed2, #ffffff) ;
         }
@@ -90,8 +90,76 @@ header {
 }
 hr {
     border-color: #da7897;
-    
+}
+ .menumenu{
+display: flex;
+justify-content: space-between;
+text-decoration: none;
+padding-left: 30px;
+padding-right: 30px;
+
+
+
+ }
+
+.morgenhr {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 15px;
+
 }
 
+a {
+    text-decoration: none;
+    color: black;
+    font-family: playfairdisplay;
+    font-size: 1.2rem;
+}
+section {
+    text-align: center;
+    line-height: 1.8rem;
+}
 
+ h4{
+    padding-top: 1.5rem;
+ }
+
+ .morgenbilleder{
+    position: relative;
+    width: 275px;
+    height: 275px;
+ }
+
+ .bollesnurre{
+    border-radius: 44px;
+    position: absolute;
+    top: 33.33%;
+    right: -15.33%;
+    width: 45%;
+    height: 65%;
+    z-index: 2;
+    object-fit: cover;
+ }
+
+ .bowl{
+    border-radius: 44px;
+    position: absolute;
+    top: 5.33%;
+    right: 24.67%;
+    width: 45%;
+    height: 65%;
+    z-index: 1;
+    object-fit: cover;
+ }
+
+ .snurre{
+    border-radius: 44px;
+    position: absolute;
+    top: 62.33%;
+    right: 21.67%;
+    width: 45%; 
+    height: 65%;
+    z-index: 3;
+    object-fit: cover;
+ }
 }
