--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ h2 {
 }
 .avocado {
     border-radius: 44px;
+    border-color: #da7897;
     position: absolute;
     top: 5.33%;
     right: 36.67%;
