--- a/css/deals.css
+++ b/css/deals.css
@@ -92,4 +92,99 @@ hr {
     border-color: #da7897;
     
 }
+
+
+.beloeb{
+    border: solid #da7897;
+    font-family: playfairdisplay;
+    text-align: center;
+    border-radius: 24px;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+}
+
+#amount{
+    text-decoration: none;
+}
+
+.antal{
+    border: solid #da7897;
+    font-family: playfairdisplay;
+    text-align: center;
+    border-radius: 24px;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.koeb{
+    border: solid #da7897;
+    font-family: playfairdisplay;
+    text-align: center;
+    border-radius: 24px;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    
+}
+
+.koebbox{
+    display: flex;
+    justify-content: space-around;
+}
+
+.imgbox{
+    position: relative;
+    width: 275px;
+    height: 275px;
+
+}
+.dealsimg{
+    border-radius: 44px;
+    position: absolute;
+    top: 2.33%;
+    left: 24%;
+    width: 91%;
+    height: 103%;
+    z-index: 1;
+    object-fit: cover;
+    
+}
+
+.footerhr {
+    margin-bottom: 2rem;
+    margin-top: 6rem;
+}
+.instagramlogo {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+
+}
+.facebooklogo {
+    width: 2rem;
+    height: 2rem;
+    margin-top: 1rem;
+}
+
+.logoer{
+    display: flex;
+    justify-content: center;
+}
+
+.footerinfo{
+    text-align: center;
+    padding-top: 5px;
+}
+.footerinfo{
+    text-align: center;
+    padding-top: 5px;
+}
+
 }
