--- a/css/menu.css
+++ b/css/menu.css
@@ -321,3 +321,368 @@ section {
     padding-top: 5px;
 }
 }
+
+
+
+@media screen and (min-width: 392px) {
+    * {
+        font-family: playfairdisplay;
+    }
+        body {
+            background: linear-gradient(180deg, #ffff99, #ffffff) ;
+        }
+        
+        .forsidelogo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 60px;
+            margin: auto; /* Centrerer containeren horisontalt */
+            padding-bottom: 10px;
+        }
+        /* Reset for margin/padding */
+
+/* Skjul checkboxen */
+.burger-checkbox {
+    display: none;
+}
+
+/* Styling af burgerikonet */
+.burger {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    margin: 10px;
+    align-items: right;
+}
+
+.line {
+    height: 3px;
+    background-color: #da7897; /* Farve på linjerne */
+    margin: 5px 0;
+    border-radius: 2px; /* Runding af hjørner */
+}
+
+/* Styling af menuen */
+.menu {
+    display: none; /* Skjul menuen som standard */
+    background-color: #da7897;
+    position: absolute;
+    top: 90px; /* Placer menuen nedenfor burgerikonet */
+    right: 0;
+    width: 100%;
+    text-align: left;
+    font-family: playfairdisplay;
+}
+
+.menu ul {
+    list-style: none;
+}
+
+.menu ul li {
+    padding: 15px;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    display: block;
+}
+
+/* Vis menuen, når checkboxen er markeret */
+.burger-checkbox:checked + .burger + .menu {
+    display: block;
+}
+
+header {
+    padding: 30px;
+}
+hr {
+    border-color: #da7897;
+}
+
+h2 {
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: playfairdisplay;
+    padding-bottom: 1rem;
+}
+.infotext {
+    font-size: 1rem;
+    text-align: justify;
+    line-height: 1.8rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+.bowl {
+    border-radius: 44px;
+    position: absolute;
+    top: 5.33%;
+    left: 70%;
+    width: 55%; /* Får dem til at fylde hele containeren */
+    height: 90%;
+    z-index: 1;
+    object-fit: cover;
+    
+}
+.bolle {
+    border-radius: 34px;
+    position: absolute;
+    top: 64%;
+    left: 43.33%;
+    width: 30%; /* Får dem til at fylde hele containeren */
+    height: 50%;
+    z-index: 3;
+    object-fit: cover;
+   
+}
+.avocado {
+    border-radius: 44px;
+    border-color: #da7897;
+    position: absolute;
+    top: 5.33%;
+    right: 36.67%;
+    width: 50%; /* Får dem til at fylde hele containeren */
+    height: 70%;
+    z-index: 2;
+    object-fit: cover;
+}
+.imagesfrontmenu {
+    position: relative;
+    width: 275px;
+    height: 275px;
+
+}
+
+.menubutton {
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    top: 102%;
+    left: 86.67%;
+    z-index: 4;
+    position: absolute;
+    border: none;
+    box-shadow: 2px 2px 4px 0px grey;
+}
+.menukortlink {
+    text-decoration: none;
+    color: black;
+    font-family: playfairdisplay;
+    font-weight: bold;
+}
+
+.eventshr{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.eventsh2{
+    padding-top: 8rem;
+
+}
+
+.eventstekst{
+    padding-top: 1rem;
+    font-size: 1rem;
+    text-align: justify;
+    line-height: 1.8rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.eventimg{
+    position: relative;
+    width: 275px;
+    height: 275px;
+    
+}
+
+.run{
+    border-radius: 34px;
+    position: absolute;
+    top: 5.33%;
+    left: 80%;
+    width: 45%; /* Får dem til at fylde hele containeren */
+    height: 90%;
+    z-index: 1;
+    object-fit: cover;
+}
+
+.keramik {
+    border-radius: 34px;
+    position: absolute;
+    top: 64%;
+    left: 64%;
+    width: 40%; /* Får dem til at fylde hele containeren */
+    height: 50%;
+    z-index: 3;
+    object-fit: cover;
+   
+}
+.strik {
+    border-radius: 44px;
+    border-color: #da7897;
+    position: absolute;
+    top: 5.33%;
+    right: 21.33%;
+    width: 50%; /* Får dem til at fylde hele containeren */
+    height: 70%;
+    z-index: 2;
+    object-fit: cover;
+}
+
+.eventlink{
+    text-decoration: none;
+    color: black;
+    font-family: playfairdisplay;
+    font-weight: bold;
+}
+
+.eventbutton{
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    top: 100%;
+    left: 10.66%;
+    z-index: 4;
+    position: absolute;
+    box-shadow: 2px 2px 4px 0px grey;
+    border: none;
+    
+}
+.lokationh2 {
+    padding-top: 8rem;
+}
+.lokationshr {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.lokationtekst {
+    padding-top: 1rem;
+    font-size: 1rem;
+    text-align: justify;
+    line-height: 1.8rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.lokationbox {
+    position: relative;
+    width: 275px;
+    height: 275px;
+}
+
+.lokationimg {
+    border-radius: 44px;
+    position: absolute;
+    top: 37.33%;
+    left: 26%;
+    width: 90%;
+    height: 90%;
+    z-index: 1;
+    object-fit: cover;
+    
+}
+
+.lokationbutton {
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    top: 10%;
+    left: 50%;
+    z-index: 4;
+    position: absolute;
+    border: none;
+    box-shadow: 2px 2px 4px 0px grey;
+}
+
+.lokationlink {
+    text-decoration: none;
+    color: black;
+    font-family: playfairdisplay;
+    font-weight: bold;
+}
+.reviewh2 {
+    padding-top: 8rem;
+}
+.reviewhr {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.reviewboks {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.haticeboks {
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.lotteboks {
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.galboks{
+    border: 3px solid #da7897;
+    border-radius: 10px;
+    text-align: center; 
+    margin: 30px;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.hatice {
+ margin-top: 1rem;
+ margin-bottom: 1rem;
+}
+.lotte {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.gal {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.footerhr {
+    margin-bottom: 2rem;
+}
+.instagramlogo {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+
+}
+.facebooklogo {
+    width: 2rem;
+    height: 2rem;
+}
+
+.logoer{
+    display: flex;
+    justify-content: center;
+}
+
+.footerinfo{
+    text-align: center;
+    padding-top: 5px;
+}
+}
